--- a/ai_app/templates/index.html
+++ b/ai_app/templates/index.html
@@ -11,8 +11,9 @@
     <br>
     <label for="method">Method</label>
         <select name="method" id="method">
-            <option value="local">Local</option>
             <option value="api">API</option>
+            <option value="local">Local</option>
+            <option value="godzilla">Godzilla</option>
         </select>
     <button type="submit">Submit</button>
 </form>
